// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`stripIrrelevantContentFromResourceDDL should strip the AUTO_INCREMENT index from TABLEs 1`] = `
"CREATE TABLE \`some_resource_table\` (
  \`id\` int(11) NOT NULL AUTO_INCREMENT,
  \`created_at\` datetime DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci"
`;

exports[`stripIrrelevantContentFromResourceDDL should strip the DEFINER from FUNCTIONs 1`] = `
"CREATE FUNCTION \`upsert_user_description\`(
  in_from_user_id BIGINT
) RETURNS boolean
BEGIN
  -- just select something, and also include a comment
  SELECT false;
END"
`;

exports[`stripIrrelevantContentFromResourceDDL should strip the DEFINER from PROCEDUREs 1`] = `
"CREATE PROCEDURE \`upsert_user_description\`(
  IN in_from_user_id BIGINT
)
BEGIN
  -- just select something, and also include a comment
  SELECT false;
END"
`;
